Добавил все страницы и стили

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <h1 class="main-heading">Добро пожаловать на курс “Создание веб-сайтов (HTML, CSS)”!</h1>
         <img class="class-photo" src="img/class2.png" width="523px" height="316px">
         <h2>Для кого этот курс</h2>
+        <div class="text-right">
+            <p>"Учимся<br />
+                вместе"
+        </div>
         <p class="intro-text">Этот курс рассчитан на новичков, которые только начинают знакомство
             с веб-разработкой. В начале курса вы узнаете о том, как устроен
             Интернет и веб-сайты.
@@ -46,7 +50,8 @@
 
         <h2>Чему вы научитесь</h2>
         <p class="intro-text">На этом курсе вы узнаете, как устроены веб-сайты и как создавать их с
-            нуля. Изучите основы языков <strong>HTML</strong>, <strong>CSS</strong> и немного <strong>JavaScript</strong>. Мы вместе
+            нуля. Изучите основы языков <strong>HTML</strong>, <strong>CSS</strong> и немного
+            <strong>JavaScript</strong>. Мы вместе
             сверстаем сайт нашей группы по этому макету. А затем вы <em>сами</em>
             сверстаете свои личные странички в качестве домашнего задания и мы
             выложим все это на сервер.</p>
@@ -54,7 +59,7 @@
 
     <footer class="footer">
         <p class="copyright">
-            2022 &copy; <a href="" class="innopolis-link">учебный центр</a> 
+            2022 &copy; <a href="" class="innopolis-link">учебный центр</a>
         </p>
     </footer>
 </body>
