--- a/pages/about.html
+++ b/pages/about.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Сайт группы</title>
+    <script async src="../js/popup.js"></script>
 </head>
 
 <body class="page">
@@ -21,16 +22,26 @@
             <li><a class="menu-link" href="#">О курсе</a></li>
             <li><a class="menu-link" href="../pages/contacts.html">Контакты</a></li>
         </ul>
-        <a class="login-button">Войти</a>
+        <a class="login-button" href="login.html">Войти</a>
+        <div class="login-popup">
+            <h2 class="login-heading">Войти на сайт</h2>
+            <form class="login-form">
+                <input class="login-input" name="login" type="text" placeholder="Логин" required>
+                <input class="login-password" name="password" type="text" placeholder="Пароль" required>
+                <button class="popup-button" type="submit">Войти</button>
+            </form>
+        </div>
     </header>
 
     <main class="main">
-        
+        <h1 class="main-student">О курсе 📱</h1>
+        <p class="text">Посмотрите видео о нас</p>
+        <img class="video" src="../img/video1.png" alt="video">
     </main>
 
     <footer class="footer">
         <p class="copyright">
-            2022 &copy; <a href="" class="innopolis-link">учебный центр</a> 
+            2022 &copy; <a href="" class="innopolis-link">учебный центр</a>
         </p>
     </footer>
 </body>
