--- a/pages/students.html
+++ b/pages/students.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <title>Сайт группы</title>
+    <script async src="../js/popup.js"></script>
 </head>
 
 <body class="page">
@@ -21,16 +22,49 @@
             <li><a class="menu-link" href="../pages/about.html">О курсе</a></li>
             <li><a class="menu-link" href="../pages/contacts.html">Контакты</a></li>
         </ul>
-        <a class="login-button">Войти</a>
+        <a class="login-button" href="login.html">Войти</a>
+        <div class="login-popup">
+            <h2 class="login-heading">Войти на сайт</h2>
+            <form class="login-form">
+                <input class="login-input" name="login" type="text" placeholder="Логин" required>
+                <input class="login-password" name="password" type="text" placeholder="Пароль" required>
+                <button class="popup-button" type="submit">Войти</button>
+            </form>
+        </div>
     </header>
 
     <main class="main">
-        
+        <h1 class="main-student">Студенты потока 08.02.2020 👧👦</h1>
+        <div class="students">
+            <section class="student">
+                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Василий Иванов</p>
+            </section>
+            <section class="student">
+                <div class="new-student-plashka">
+                    <div class="new-student">НОВИЧОК</div>
+                </div>
+                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Мария Александрова</p>
+            </section>
+            <section class="student">
+                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Мария Александрова</p>
+            </section>
+            <section class="student">
+                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Василий Иванов</p>
+            </section>
+            <section class="student">
+                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Василий Иванов</p>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
         <p class="copyright">
-            2022 &copy; <a href="" class="innopolis-link">учебный центр</a> 
+            2022 &copy; <a href="" class="innopolis-link">учебный центр</a>
         </p>
     </footer>
 </body>
