--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="page">
     <header class="header">
-        <img class="site-logo" src="./img/logo.svg">
+        <img class="site-logo" src="./img/logo.svg" width="auto" height="47px">
         <ul class="site-menu">
             <li><a class="menu-link" href="#">Главная</a></li>
             <li><a class="menu-link" href="./pages/students.html">Студенты</a></li>
@@ -33,7 +33,7 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="main-about">
         <h1 class="main-heading">Добро пожаловать на курс “Создание веб-сайтов (HTML, CSS)”!</h1>
         <img class="class-photo" src="img/class2.png" width="523px" height="316px">
         <h2>Для кого этот курс</h2>
@@ -59,7 +59,7 @@
 
     <footer class="footer">
         <p class="copyright">
-            2022 &copy; <a href="" class="innopolis-link">учебный центр</a>
+            2023 &copy; <a href="https://innopolis.university/" target="_blank" class="innopolis-link">учебный центр</a>
         </p>
     </footer>
 </body>
