--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
 
 <body class="page">
     <header class="header">
-        <img class="site-logo" src="../img/logo.svg">
+        <img class="site-logo" src="../img/logo.svg" width="auto" height="47px">
         <ul class="site-menu">
             <li><a class="menu-link" href="../index.html">Главная</a></li>
             <li><a class="menu-link" href="../pages/students.html">Студенты</a></li>
@@ -41,7 +41,7 @@
 
     <footer class="footer">
         <p class="copyright">
-            2022 &copy; <a href="" class="innopolis-link">учебный центр</a>
+            2023 &copy; <a href="https://innopolis.university/" target="_blank" class="innopolis-link">учебный центр</a>
         </p>
     </footer>
 </body>
