--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -15,7 +15,7 @@
 
 <body class="page">
     <header class="header">
-        <img class="site-logo" src="../img/logo.svg">
+        <img class="site-logo" src="../img/logo.svg" width="auto" height="47px">
         <ul class="site-menu">
             <li><a class="menu-link" href="../index.html">Главная</a></li>
             <li><a class="menu-link" href="../pages/students.html">Студенты</a></li>
@@ -33,17 +33,17 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="main-map">
         <h1 class="address-student">Как нас найти 🗺️️</h1>
-        <img class="map-photo" src="../img/google-map1.png" alt="map">
-        <p class="text">Наши контакты</p>
-        <h5 class="text-contacts">Адрес: г. Санкт-Петербург, Дворцовая пл., 2, 190000</h6>
-            <p class="phone-text">Тел: <a href=”tel:+78125555555”>+7 (812) 555-55-55</a></p>
+        <p class="map-photo"><script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ae6e506df380d8852d7b9f999ced24c5fad1b9f7d3844ff4c772913d92dfad43f&amp;width=1268&amp;height=370&amp;lang=ru_RU&amp;scroll=true"></script></p>
+        <p class="text-map">Наши контакты</p>
+        <h5 class="text-contacts">Адрес: 420500, г. Иннополис, ул. Университетская, д. 1</h6>
+            <p class="phone-text">Тел: <a href=”tel:+78432039253”>+7 (843) 203-92-53</a></p>
     </main>
 
     <footer class="footer">
         <p class="copyright">
-            2022 &copy; <a href="" class="innopolis-link">учебный центр</a>
+            2023 &copy; <a href="https://innopolis.university/" target="_blank" class="innopolis-link">учебный центр</a>
         </p>
     </footer>
 </body>
