--- a/pages/students.html
+++ b/pages/students.html
@@ -15,7 +15,7 @@
 
 <body class="page">
     <header class="header">
-        <img class="site-logo" src="../img/logo.svg">
+        <img class="site-logo" src="../img/logo.svg" width="auto" height="47px">
         <ul class="site-menu">
             <li><a class="menu-link" href="../index.html">Главная</a></li>
             <li><a class="menu-link" href="#">Студенты</a></li>
@@ -33,38 +33,39 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="main-map">
         <h1 class="main-student">Студенты потока 08.02.2020 👧👦</h1>
         <div class="students">
             <section class="student">
-                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
-                <p class="student-name">Василий Иванов</p>
+                <img class="student-photo" src="../img/student2.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Татьяна Иванова</p>
             </section>
             <section class="student">
                 <div class="new-student-plashka">
                     <div class="new-student">НОВИЧОК</div>
                 </div>
-                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
-                <p class="student-name">Мария Александрова</p>
+                <a href="../pages/aboutme.html">
+                <img class="student-photo" src="../img/student1.png" width="200px" height="270px" alt="photo"></a>
+                <p class="student-name">Андрей Бытко</p>
             </section>
             <section class="student">
-                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
-                <p class="student-name">Мария Александрова</p>
+                <img class="student-photo" src="../img/student4.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Юлия Васильева</p>
             </section>
             <section class="student">
-                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
-                <p class="student-name">Василий Иванов</p>
+                <img class="student-photo" src="../img/student3.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Николай Дмитриев</p>
             </section>
             <section class="student">
-                <img class="student-photo" src="../img/photo.png" width="200px" height="270px" alt="photo">
-                <p class="student-name">Василий Иванов</p>
+                <img class="student-photo" src="../img/student5.png" width="200px" height="270px" alt="photo">
+                <p class="student-name">Ольга Юрьевна</p>
             </section>
         </div>
     </main>
 
     <footer class="footer">
         <p class="copyright">
-            2022 &copy; <a href="" class="innopolis-link">учебный центр</a>
+            2023 &copy; <a href="https://innopolis.university/" target="_blank" class="innopolis-link">учебный центр</a>
         </p>
     </footer>
 </body>
