Поправил страницу о себе

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -35,17 +35,15 @@
 
     <main class="main">
         <h1>Привет всем!</h1>
-        <p>Меня зовут Андрей. Я из Белгорода. Последние пару лет работаю на фрилансе - компьютерный мастер, графический
-            дизайнер и создаю сайты на <b>CMS WordPress</b> с использованием готовых тем и плагинов
-        </p>
-
-        <p>Потому что на сегодняшний день я самостоятельно не пишу код, а лишь иногда редактирую его,
+        <p>Меня зовут Андрей Бытко. Я из Белгорода. Последние пару лет работаю на фрилансе - компьютерный мастер,
+            графический
+            дизайнер и создаю сайты на <strong>CMS WordPress</strong> с использованием готовых тем и плагинов, потому
+            что я самостоятельно не пишу код, а лишь иногда редактирую его,
             но без базовых знаний это очень сложно, поэтому я выбрал наиболее оптимальную систему управления сайтов
-            <b>CMS
-                WordPress</b>
+            <strong>CMS WordPress</strong>
             и функции создаю при помощи плагинов, но далеко не всегда можно решить задачу при использовании плагинов
-            либо там
-            чего-то не хватает или очень много лишнего</p>
+            либо там чего-то не хватает или очень много лишнего
+        </p>
 
         <h2>Мой логотип</h2>
 
