--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="https://innopolis.university/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="../css/style-aboutme.css">
     <title>Сайт группы</title>
     <script async src="../js/popup.js"></script>
