--- a/pages/about.html
+++ b/pages/about.html
@@ -25,6 +25,7 @@
         </ul>
         <a class="login-button" href="login.html">Войти</a>
         <div class="login-popup">
+            <img class="popup-close" alt="Закрытие иконка" src="../img/close.svg">
             <h2 class="login-heading">Войти на сайт</h2>
             <form class="login-form">
                 <input class="login-input" name="login" type="text" placeholder="Логин" required>
@@ -37,7 +38,10 @@
     <main class="main">
         <h1 class="main-student">О курсе 📱</h1>
         <p class="text">Посмотрите видео о нас</p>
-        <img class="video" src="../img/video1.png" alt="video">
+        <div class="inframe">
+            <iframe class="video" width="820px" height="549.33px" src="https://www.youtube.com/embed/0v7pdd4za6s" allowfullscreen></iframe>
+        </div>
+        
     </main>
 
     <footer class="footer">
