--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -25,6 +25,7 @@
         </ul>
         <a class="login-button" href="login.html">Войти</a>
         <div class="login-popup">
+            <img class="popup-close" alt="Закрытие иконка" src="../img/close.svg">
             <h2 class="login-heading">Войти на сайт</h2>
             <form class="login-form">
                 <input class="login-input" name="login" type="text" placeholder="Логин" required>
